@@ -1,3 +1,10 @@
+2014-12-15  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf_getpubnames.c (get_offsets): Make sure whole unit fall inside
+	section data.
+	(dwarf_getpubnames): Make sure section data contains string zero
+	terminator.
+
 2014-12-16  Mark Wielaard  <mjw@redhat.com>
 
 	* memory-access.h (__libdw_get_sleb128): Unroll the first step to help
